(issue #3880) use overflow instead of padding

--- a/shared/oae/css/oae.components.css
+++ b/shared/oae/css/oae.components.css
@@ -887,7 +887,9 @@ div.oae-thumbnail i.fa {
 
 .oae-lhnavigation > ul.nav > li a div,
 .oae-lhnavigation > ul.nav > li button div {
-    padding: 8px 0 0 31px;
+    overflow: auto;
+    padding-top: 8px;
+    word-break: break-word;
 }
 
 .oae-lhnavigation > ul.nav > li {
